# Arcade

./: Chess.py  CountryGuesser.py  PGN.py  Plinko.py  Pong.py  ai.py  balance.py  board.py  check.py  config.py  convert.py  main.py  moves.py  pyproject.toml
chess games/: 2022-01-11 19_51_19.268905.txt  2022-08-03 17_58_18.594331.txt  2022-08-03 18_10_27.500008.txt
people/: andrew.txt
